# Copyright 2018 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

group("core") {
  deps = [
    #TODO: "crashanalyzer",
    "crashsvc",
    "devmgr",
    #TODO: "netsvc",
    #TODO: "pwrbtn-monitor",
    #TODO: "svchost",
    #TODO: "virtcon",
  ]
}
