# Copyright 2018 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

group("dev") {
  testonly = true
  deps = [
    "audio",
    "block",
    "bluetooth",
    "board",
    "bus",
    "misc/test",
    "test/ddk-test",
  ]

  others = [
    "clk",
    "codec",
    "display",
    "ethernet",
    "gpio",
    "gpu",
    "i2c",
    "input",
    "lib",
    "light",
    "misc",
    "nand",
    "pci",
    "rtc",
    "sample",
    "scpi",
    "serial",
    "tee",
    "test",
    "thermal",
    "usb",
    "video",
  ]
  not_needed([ "others" ])
}
